/***********************************************************************
X3 ChangeLog

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_fakehost function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_user_mode function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_channel_mode function.

2009-10-11  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: remember to increase reference count of Py_None.

2009-10-11  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_kick function.

2009-10-11  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_config function.

2009-10-09  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_timeq_del function.

2009-10-09  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_timeq_add function.

2009-10-07  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor dict_t construction logic.

2009-10-07  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_channel.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor modeList conversion into separate function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor out common error cleanup logic.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_accounts function and refactor some
	common logic into a single routine.

	* src/nickserv.h src/nickserv.c: make nickserv_handle_dict externally
	available.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_kill function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for pyobj_from_usernode.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: improve error logic for emb_get_servers.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>
